# rlxos-build-meta

./: .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  buildstream.conf  project.conf
.github/workflows/: continuous.yml
elements/: freedesktop-sdk.bst  platform.bst
elements/components/: appimaged.bst  appstream-glib.bst  babl.bst  bolt.bst  callaudiod.bst  calls.bst  cheese.bst  d-spy.bst  devhelp.bst  distrobox.bst  eg25-manager.bst  eog.bst  eos-updater.bst  evince.bst  evolution-data-server.bst  fcitx5-gtk.bst  feedbackd.bst  firmware.bst  fish.bst  flatpak-builder.bst  flatpak.bst  fwupd.bst  gcab.bst  gdk-pixbuf.bst  gegl.bst  geocode-glib-1.bst  gi-docgen.bst  gjs.bst  glib.bst  gnome-bluetooth.bst  gnome-boxes.bst  gnome-builder.bst  gnome-characters.bst  gnome-control-center.bst  gnome-initial-setup.bst  gnome-maps.bst  gnome-remote-desktop.bst  gnome-shell-extension-blur-my-shell.bst  gnome-shell-extensions.bst  gnome-shell.bst  (+57 more)
elements/config/: default-wallpaper-override.bst  default-wallpaper.bst  gnome-override.bst  install-scripts.bst  nsswitch-config.bst  ostree-config.bst  plymouth-theme.bst  sudo.bst  useradd.bst  wpa-supplicant-config.bst
elements/groups/: base.bst  devel.bst  extra.bst  gnome.bst
elements/include/: linux.yml
elements/installer/: deps.bst  eos-installer-extra.bst  eos-installer.bst  image.bst  os-installer-extra.bst  os-installer.bst  public-key.bst  signed-image.bst  (+1 more)
files/os-release/: meson.build  os-release.in
include/: options.yml  plugins.yml  variables.yml
tests/: main.pm
utils/: commit-ostree.sh
(+59 files in other folders)
